fix: hide overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,6 @@
 
 body {
   background-color: #262626;
+  overflow: hidden;
+  color: white;
 }
